# pymetsa

./: .env  Dockerfile  LICENSE  README.md  pyproject.toml
app/: launch.py
data/: final_prediction.shx
data/arbonaUT/Vector_data/: Age_grid.dbf  Age_grid.shp  Age_grid.shx
data/temp_storage/: ndvi_from_geotiff_example.tif
examples/: 1_data_extraction.py  1_unification.py  2_data_extraction.py  2_vector_to_raster.py  3_model_fit.py  3_neural_network_preparation.py  5_matrix_vis.py  6_prepared_data_visualization.py  7_apply_fitted_model.py  api_aeris.py  calculate_ndvi.py  create_tif.py  create_tif_example.py  get_tif_meta.py  plot_ndvi.py
examples/extra/: api_aeris.py  calculate_ndvi.py  create_tif_example.py  get_tif_meta.py  plot_ndvi.py
examples/temp_storage/: ndvi_from_geotif_example.tif
pymetsa/: constants.py  paths.py
pymetsa/download/: conditions_download.ipynb  from_aeris.py
pymetsa/download/aeris_output/: conditions-download-2024-03-06T17:01.csv
pymetsa/preprocessing/: join_csv.py
pymetsa/preprocessing/raster/: create_tif.py  get_tif_meta.py  ndvi_from_tif.py
pymetsa/preprocessing/vector/: vector_raster.py
pymetsa/preprocssing/raster/: create_tif.py  ndvi_from_tif.py
pymetsa/sample/tif_files/: geotif_example.tif
pymetsa/visualization/: visualize_ndvi.py
