[tool.poetry]
name = "pymetsa"
version = "0.1.0"
description = ""
authors = ["Dreamlone <mik.sarafanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
raster = "^0.0.0"
rasterio = "^1.3.9"
matplotlib = "^3.8.3"
requests = "^2.31.0"
pandas = "^2.2.1"
uvicorn = "^0.27.1"
geopandas = "^0.14.3"
loguru = "^0.7.2"
rasterstats = "^0.19.0"
datasphere = "^0.6.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
